Import of XAICRON/HTML-Filter-Callbacks-0.07 from CPAN.
gitpan-cpan-distribution: HTML-Filter-Callbacks
gitpan-cpan-version:      0.07
gitpan-cpan-path:         XAICRON/HTML-Filter-Callbacks-0.07.tar.gz
gitpan-cpan-author:       XAICRON
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               HTML-Filter-Callbacks
-version:            0.06
+version:            0.07
 abstract:           modify HTML with callbacks
 author:
     - Kenichi Ishigaki <ishigaki@cpan.org>
@@ -18,7 +18,7 @@ no_index:
     directory:
         - t
         - inc
-generated_by:       ExtUtils::MakeMaker version 6.56
+generated_by:       ExtUtils::MakeMaker version 6.57_05
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
