Import of XAICRON/HTML-Filter-Callbacks-0.08 from CPAN.
gitpan-cpan-distribution: HTML-Filter-Callbacks
gitpan-cpan-version:      0.08
gitpan-cpan-path:         XAICRON/HTML-Filter-Callbacks-0.08.tar.gz
gitpan-cpan-author:       XAICRON
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,24 +1,24 @@
---- #YAML:1.0
-name:               HTML-Filter-Callbacks
-version:            0.07
-abstract:           modify HTML with callbacks
+---
+abstract: 'modify HTML with callbacks'
 author:
-    - Kenichi Ishigaki <ishigaki@cpan.org>
-license:            perl
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Kenichi Ishigaki <ishigaki@cpan.org>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    HTML::Parser:         3
-    Test::More:           0.47
-    Test::UseAllModules:  0.10
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.57_05
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.112621'
+license: perl
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: HTML-Filter-Callbacks
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  HTML::Parser: 3
+  Test::More: 0.47
+  Test::UseAllModules: 0.10
+version: 0.08
