--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,15 @@
 ---
 abstract: 'modify HTML with callbacks'
 author:
-  - 'Kenichi Ishigaki <ishigaki@cpan.org>'
+  - 'Kenichi Ishigaki, <ishigaki@cpan.org>'
 build_requires:
   ExtUtils::MakeMaker: 0
 configure_requires:
-  ExtUtils::MakeMaker: 0
-dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.112621'
+  CPAN::Meta: 0
+  CPAN::Meta::Prereqs: 0
+  Module::Build: 0.38
+dynamic_config: 0
+generated_by: 'Minilla/v0.0.52, CPAN::Meta::Converter version 2.130870'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -16,9 +18,27 @@ name: HTML-Filter-Callbacks
 no_index:
   directory:
     - t
+    - xt
     - inc
+    - share
+    - eg
+    - examples
+provides:
+  HTML::Filter::Callbacks:
+    file: lib/HTML/Filter/Callbacks.pm
+    version: 0.09
+  HTML::Filter::Callbacks::Tag:
+    file: lib/HTML/Filter/Callbacks/Tag.pm
 requires:
   HTML::Parser: 3
   Test::More: 0.47
   Test::UseAllModules: 0.10
-version: 0.08
+resources:
+  bugtracker: https://github.com/charsbar/html-filter-callbacks/issues
+  homepage: https://github.com/charsbar/html-filter-callbacks
+  repository: git://github.com/charsbar/html-filter-callbacks.git
+version: 0.09
+x_contributors:
+  - 'ishigaki <ishigaki@localhost.localdomain>'
+  - 'cos31 <cos31@ymail.com>'
+  - 'xaicron <xaicron@gmail.com>'
